--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
-matplotlib
 aniso8601==6.0.0
 Click==7.0
+cycler==0.10.0
 Flask==1.0.3
 Flask-RESTful==0.3.7
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.0
 numpy==1.16.3
 palettable==3.1.1
 Pillow==6.0.0
+pyparsing==2.4.0
+python-dateutil==2.8.0
 pytz==2019.1
 six==1.12.0
 Werkzeug==0.15.4
